src/objects/QB_Credit_Memo_Line__c.object
<CustomObject>
    <description>The lines in a credit memo.</description>
    <fields>
        <fullName>Credit_Memo_Number__c</fullName>
        <description>The number of the credit memo the line belongs to.</description>
        <inlineHelpText>The number of the credit memo the line belongs to.</inlineHelpText>
        <label>Credit Memo Number</label>
        <referenceTo>QB_Credit_Memo__c</referenceTo>
        <relationshipLabel>Credit Memo Lines</relationshipLabel>
        <relationshipName>R00N40000001rPCPEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InvoiceID__c</fullName>
        <description>The SFDC ID of the invoice the credit memo was attributed to.  This is required because a credit memo can be used against multiple invoices.</description>
        <inlineHelpText>The SFDC ID of the invoice the credit memo was attributed to.  This is required because a credit memo can be used against multiple invoices.</inlineHelpText>
        <label>InvoiceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <description>The amount of the credit memo line,</description>
        <inlineHelpText>The amount of the credit memo line,</inlineHelpText>
        <label>Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <description>The description on a credit memo line.</description>
        <inlineHelpText>The description on a credit memo line.</inlineHelpText>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>The price of the product credited.</description>
        <inlineHelpText>The price of the product credited.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The item/product the credit is issued against.</description>
        <inlineHelpText>The item/product the credit is issued against.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>QuickBooks Credit Memo Lines</relationshipLabel>
        <relationshipName>R00N40000001rRdSEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QB_Credit_Memo_LINE_ID__c</fullName>
        <description>The internal ID of the credit memo line in QuickBooks.</description>
        <inlineHelpText>The internal ID of the credit memo line in QuickBooks.</inlineHelpText>
        <label>QuickBooks Credit Memo LINE ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The number of products credited on this line.</description>
        <inlineHelpText>The number of products credited on this line.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>QuickBooks Credit Memo Line</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Credit Memo Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickBooks Credit Memo Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>